@@ -151,8 +151,11 @@ class Album {
        	}
 
 	function isRoot() {
-		if ($this->fields["parentAlbumName"]) return 0;
-		else return 1;
+	    if ($this->fields["parentAlbumName"]) {
+		return 0;
+	    } else {
+		return 1;
+	    }
 	}
 
 	function itemLastCommentDate($i) {
@@ -203,31 +206,54 @@ class Album {
 	}
 
 	/*
-	** Returns an array of the parent album names for a given album.
-	** Key is albumname, value is albumtitle
+	** Returns an array of the parent albums.
+	** Each elemt contains a prefix Text, the title and the url.
 	** Array is reverted, so the first Element is the topalbum.
 	** If you set $addChild true, then the child album itself is added as last Element.
-	** Based on code by: Dariush Molavi
+	** If you set $ignoreReturnto, then really ALL toplevel albums are added.
+	** Based on code by Dariush Molavi
 	** Note: the 30 is a limit to prevent unlimited recursing.
 	*/
-	function getParentAlbums($addChild=false) {
-		global $gallery;
+	function getParentAlbums($addChild = false, $ignoreReturnto = false) {
+	    global $gallery;
 
-		$parentAlbum = $this;
-		$parentNameArray = array();
-		$depth=0;
+	    $currentAlbum = $this;
+	    $parentAlbumsArray = array();
+	    $depth = 0;
 
-		if ($addChild == true) {
-			$parentNameArray[$this->fields['name']] = $this->fields['title'];
-		}
+	    if ($addChild == true) {
+		$parentAlbumsArray[] = array(
+			'prefixText' => _("Album"),
+			'title' => $this->fields['title'],
+			'url' => makeAlbumUrl($this->fields['name']));
+	    }
 
-		while (($parentAlbum = $parentAlbum->getParentAlbum(FALSE)) && $depth < 30) {
-			$parentNameArray[$parentAlbum->fields['name']] = $parentAlbum->fields['title'];
-			$depth++;
-		}
+	    /* If there is a parent album and our current album allows the return link, or we ignore it,
+	    ** then add it to the parent album to the list.
+	    */
+	    while (($parentAlbum = $currentAlbum->getParentAlbum(FALSE)) && 
+			$depth < 30 &&
+			($currentAlbum->fields['returnto'] != 'no' || $ignoreReturnto == true)) {
+		$parentAlbumsArray[] = array(
+			'prefixText' => _("Album"),
+			'title' => $parentAlbum->fields['title'],
+			'url' => makeAlbumUrl($parentAlbum->fields['name']));
+		$depth++;
+		$currentAlbum = $parentAlbum;
+	    }
 
-		$parentNameArray = array_reverse($parentNameArray, true);
-		return $parentNameArray;
+	    /* If the last album is a root album (= has no parent) and a returnto link is wanted, 
+	    ** add the link to Gallery mainpage 
+	    */	
+	    if (!isset($parentAlbum) && $currentAlbum->fields['returnto'] != 'no'){
+		$parentAlbumsArray[] = array(
+			'prefixText' => _("Gallery"),
+			'title' => $gallery->app->galleryTitle,
+			'url' => makeGalleryUrl("albums.php"));
+	    }
+
+	    $parentAlbumsArray = array_reverse($parentAlbumsArray, true);
+	    return $parentAlbumsArray;
 	}
 
 	function getRootAlbumName() {
