@@ -109,12 +109,10 @@ $upArrowURL = '<img src="' . getImagePath('nav_home.gif') . '" width="13" height
 		'alt="' . _("navigate UP") .'" title="' . _("navigate UP") .'" border="0">';
 
 if ($gallery->album->fields['returnto'] != 'no') {
-	$breadcrumb["text"][]= _("Gallery") .": <a class=\"bread\" href=\"" . makeGalleryUrl("albums.php") . "\">" . 
-		$gallery->app->galleryTitle . "&nbsp;" . $upArrowURL . "</a>";
-	foreach ($gallery->album->getParentAlbums() as $name => $title) {
-		$breadcrumb["text"][] = _("Album") .": <a class=\"bread\" href=\"" . makeAlbumUrl($name) . "\">" . 
-			$title. "&nbsp;" . $upArrowURL . "</a>";
-	}
+    foreach ($gallery->album->getParentAlbums() as $navAlbum) {
+	$breadcrumb["text"][] = $navAlbum['prefixText'] .': <a class="bread" href="'. $navAlbum['url'] . '">'. 
+	  $navAlbum['title'] . "&nbsp;" . $upArrowURL . "</a>";
+    }
 }
 
 $breadcrumb["bordercolor"] = $bordercolor;
